--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h1>
             Valfri affärside!
         </h1>
+        <h2>
+            That's what we love!
+        </h2>
         <nav id="topNav">
             <a id="topMenuButton" href="#">☰</a>
                 <ul>
