--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Responsiv Webbdesign</title>
     <link rel="stylesheet" href="css/styleSheet.css">
     <link rel="stylesheet" href="css/gridCSS.css">
+    <link rel="icon" type="image/x-icon" href="img/26274.webp">
 </head>
 <body>
     <header>
