--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 
         <section class="col-t-3 col-d-2 gold">
             <h2>Har ingen fantasi</h2>
-            <p>Ja1</p>
+            <p>Troligen sant</p>
         </section>
 
         <section class="col-t-2 col-d-2 purple">
             <h2>Har verkligen ingen fantasi</h2>
-            <p>Nej2</p>
+            <p>Ja, det är sant</p>
         </section>
 
         <section class="col-t-4 col-d-2 orange">
             <h2>Där tog den slut</h2>
-            <p>Kanske3</p>
+            <p>Hundra Procent!</p>
         </section>
     </main>
 
